5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1585_2895.log
== TEST (2019-03-21 11:46:12) 
-- CODE:
var=int(input("quantidade de jogos: ")
preco=210.00
frete=45.00
total=var*preco+frete
-- ERROR:
File "XXXX", line 2
    preco=210.00
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:46:54) 
-- CODE:
var=int(input("quantidade de jogos: ")
preco= 210
frete= 45.00
total=var*preco+frete
-- ERROR:
File "XXXX", line 2
    preco= 210
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:47:01) 
-- CODE:
var=int(input("quantidade de jogos: ")
preco=210
frete= 45.00
total=var*preco+frete
-- ERROR:
File "XXXX", line 2
    preco=210
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:47:21) 
-- CODE:
var=int(input("quantidade de jogos: "))
preco=210.00
frete= 45.00
total=var*preco+frete
-- ERROR:
File "XXXX", line 2
    preco=210
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:48:11) 
-- CODE:
var=int(input("quantidade de jogos: "))
preco=210.00
frete= 45.00
total=var*preco+frete
print(total)
-- OUTPUT:
2565.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:48:33) 
-- CODE:
var=int(input("quantidade de jogos: "))
preco=210.00
frete= 45.00
total=var*preco+frete
print(total)
-- EXECUTION TIME:
0.167804
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
2565.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
2145.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
51705.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:49:13) 
-- CODE:
var=int(input("quantidade de jogos: "))
preco=210.00
frete= 45.00
total=(var*preco)+frete
print(total)
-- OUTPUT:
2565.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:49:21) 
-- CODE:
var=int(input("quantidade de jogos: "))
preco=210.00
frete= 45.00
total=(var*preco)+frete
print(total)
-- EXECUTION TIME:
0.142325
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
2565.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
2145.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
51705.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:52:31) 
-- CODE:
var=float(input("quantidade de jogos: "))
preco=float(input("valor dos jogos: "))
frete=float(input("valor do frete: "))

total=(var*preco)+frete

print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:52:49) 
-- CODE:
var=float(input("quantidade de jogos: "))
preco=float(input("valor dos jogos: "))
frete=float(input("valor do frete: "))

total=(var*preco)+frete

print(total)
-- EXECUTION TIME:
0.152301
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
